# the-osint-vault-toolkit

./: .gitignore  LICENSE  PROJECT_STRUCTURE.txt  README.md  cli.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
cli/: __main__.py  main.py
data/: usernames.json
dork_patterns/: README.md  generate_dork.py
dork_patterns/dork_patterns/: README.md
pivot_engine/: README.md  __main__.py  core.py  core.pyXnX  patterns.json  pivot.py
pivot_engine/api/: aggregate.py  emailrep.py  emailrep.pyx  gravatar.py  phone_lookup.py  search.py  spydialer.py  username.py  username_check.py
theosintvault/: __init__.py  cli.py
theosintvault/data/: domains.json  emails.json  phones.json  usernames.json
