[tool.poetry]
name = "vaultx"
version = "1.0.0"
description = "High-velocity OSINT pivot engine."
authors = ["VaultX Dev Team"]
packages = [{include = "theosintvault"}]

[tool.poetry.scripts]
vaultx = "theosintvault.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
