[tool.poetry]
name = "vaultx"
version = "1.0.0"
description = "High-velocity OSINT pivot engine."
authors = ["VaultX Dev Team"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
vaultx = "cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
