[tool.poetry]
name = "theosintvault"
version = "1.0.1"
description = "High-velocity OSINT pivot engine for advanced reconnaissance."
authors = ["VaultX Team <dev@theosintvault.com>"]
readme = "README.md"
packages = [{include = "theosintvault"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
vaultx = "theosintvault.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
